# template-api

./: pyproject.toml
backend/: app.py  models.py
backend/migrations/: env.py
backend/routers/: router1.py
