[tool.poetry]
name = "template-api-crud"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <vgabriel@mslcorporate.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
